Make PhoneBook depend on abstract PhoneBookStorage class; implement CSVStorage